--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "react-scripts": "2.1.8"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build:css": "postcss src/styles/index.css -o src/tailwind.css",
+    "watch:css": "postcss src/styles/index.css -o src/tailwind.css -w",
+    "start": "yarn watch:css & react-scripts start",
+    "build": "yarn build:css && react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
@@ -18,5 +20,10 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "autoprefixer": "^9.5.0",
+    "postcss-cli": "^6.1.2",
+    "tailwindcss": "^1.0.0-beta.4"
+  }
 }
