--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react": "^16.8.12",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "typescript": "^3.4.2"
   },
   "scripts": {
     "build:css": "postcss src/styles/index.css -o src/tailwind.css",
@@ -15,7 +17,7 @@
     "proxy": "node setupProxy.js",
     "start": "yarn lambda:serve & yarn watch:css & react-scripts start",
     "build": "yarn lambda:build && yarn build:css && react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "browserslist": [
