--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,8 @@
 /lambda/*
 # misc
 .DS_Store
-.env.local
-.env.development.local
+.env
+.env.development
 .env.test.local
 .env.production.local
 
