--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "@types/react": "^16.8.12",
+    "@types/react-dom": "^16.8.3",
+    "@types/react-map-gl": "^4.1.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
+    "react-map-gl": "^4.1.1",
     "react-scripts": "2.1.8",
     "typescript": "^3.4.2"
   },
