--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/react-map-gl": "^4.1.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
+    "react-feather": "^1.1.6",
     "react-map-gl": "^4.1.1",
     "react-scripts": "2.1.8",
     "typescript": "^3.4.2"
