--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
     "@types/react": "^16.8.12",
     "@types/react-dom": "^16.8.3",
     "@types/react-map-gl": "^4.1.1",
+    "@types/react-redux": "^7.0.6",
+    "@types/redux": "^3.6.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-feather": "^1.1.6",
     "react-map-gl": "^4.1.1",
+    "react-redux": "^6.0.1",
     "react-scripts": "2.1.8",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
     "typescript": "^3.4.2"
   },
   "scripts": {
