--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@rehooks/component-size": "^1.0.2",
     "@types/react": "^16.8.12",
     "@types/react-dom": "^16.8.3",
     "@types/react-map-gl": "^4.1.1",
     "@types/react-redux": "^7.0.6",
     "@types/redux": "^3.6.0",
+    "immutable": "^4.0.0-rc.12",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-feather": "^1.1.6",
