--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@types/react-map-gl": "^4.1.1",
     "@types/react-redux": "^7.0.6",
     "@types/redux": "^3.6.0",
+    "chart.js": "^2.8.0",
     "immutable": "^4.0.0-rc.12",
     "react": "16.8.6",
+    "react-chartjs-2": "^2.7.6",
     "react-dom": "16.8.6",
     "react-feather": "^1.1.6",
     "react-map-gl": "^4.1.1",
